Ajout de la structure et du style pour le footer avec 3 sections, la section Activités à Marseille et Footer

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 h1, h2, h3, h4 {
-	font-style: bold;
+	font-weight: bold;
 	color: black;
 }
 
@@ -165,7 +165,7 @@ h3 {
 }
 
 .search-bar input::placeholder {
-    color: black !important; /* S'assurer que le placeholder a une couleur noire */
+    color: black !important; 
 }
 
 .search-bar .search-btn {
@@ -281,18 +281,21 @@ a {
 }
 
 /****** Hebergements And Populaires ***********/
-.hebergements-and-populaires {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 35px;
-
-}
 
 .hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
+    background-color: var(--main-bg-color); 
     border-radius: 20px;
     padding: 30px;
     box-sizing: border-box;
+   
+}
+
+.hebergements-and-populaires {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+    margin-bottom: 35px;
 }
 
 /****** Hebergements ***********/
@@ -306,21 +309,23 @@ a {
 
 .hebergements-cards {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     padding: 0;
-    margin: 0;
+    margin: 0 0 25px 0;
     justify-content: center;
     align-items: center;
+    gap: 25px;
+    
 }
 
-.hebergements-cards-rangee {
+.a-hebergements {
+    color: inherit;
+    text-decoration: none;
     display: flex;
-    flex-direction: row;
-    gap: 30px;
-    box-sizing: border-box;
-    margin: 0 0 30px 0;
-    padding: 0;
-}
+    flex-direction: column;
+    width: calc(33% - 20px); /* 3 cards par rangée avec espace */
+}  
 
 .hebergements-cards-content {
     display: flex;
@@ -335,8 +340,8 @@ a {
 }
 
 .hebergements-cards img {
-    width: 235px;
     height: 120px;
+    width: 100%;
     object-fit: cover; 
     border-radius: 20px 20px 0 0;
     padding: 0;
@@ -424,8 +429,89 @@ a {
     margin-bottom: 5px;
 }
 
+/****** Section Activités ***********/
 
+.activities-section {
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 35px 0;
+    padding: 30px;
+}
 
+.activities-card-content {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+figure {
+    padding: 0;
+    margin: 0;
+}
+
+.activities-card {
+    padding: 0;
+    margin: 0;
+}
+
+.a-activities {
+    color: inherit;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    width: 30%
+}  
+
+.activities-img {
+    height: 380px;
+    width: 100%;
+    object-fit: cover; 
+    border-radius: 20px 20px 0 0;
+    padding: 0;
+    margin: 0;
+} 
+
+.activities-section h3 {
+    margin-left: 20px;
+}
+
+.activities-section h2 {
+    margin-bottom: 30px;
+}
+
+/****** Footer ***********/
+.footer {
+    display: flex; 
+    justify-content: space-between; 
+    background-color: var(--main-bg-color);
+    padding: 20px 0; 
+}
+
+.footer-section {
+    flex: 1; 
+    padding: 20px; 
+}
+
+.footer-section ul {
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+}
+
+.footer-section li {
+    margin-bottom: 15px; 
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    color: black;
+}
+
+.footer-section a {
+    text-decoration: none; 
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
