--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
     --filter-bg-color: #DEEBFF;
 }
 
-h1 h2 h3 {
+h1, h2, h3 {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -18,11 +18,7 @@ h1 h2 h3 {
     margin: 0;
 }
 
-h1 {
-    font-size: 22px;
-}
-
-h2 {
+h1, h2 {
     font-size: 22px;
 }
 
@@ -49,8 +45,7 @@ justify-content: center;
     max-width: 1440px;
     padding: 0 50px;
     box-sizing: border-box;
-    margin: 0;
-    justify-content: center;
+    margin: 0 auto;
 }
 
 .main {
@@ -88,7 +83,7 @@ justify-content: center;
     margin: 22px;
     flex-direction: row;
     list-style: none; 
-    margin: 0 0 50;
+    margin-top: 22px;
     padding: 0;
     gap : 68px;
 }
@@ -125,7 +120,7 @@ justify-content: center;
 }
 
 .search-header p {
-    margin-top: -10px; 
+    margin-top: 10px; 
 }
 
 .search-bar {
@@ -504,6 +499,10 @@ figure {
     padding: 0; 
 }
 
+.footer h3 {
+margin-bottom: 10px;
+}
+
 .footer-section {
     flex: 1; 
     padding: 20px; 
@@ -516,7 +515,7 @@ figure {
 }
 
 .footer-section li {
-    margin-bottom: 15px; 
+    margin-bottom: 10px; 
     font-family: Raleway;
     font-size: 16px;
     font-style: normal;
@@ -696,6 +695,8 @@ figure {
         width: 100%;
         text-align: center;
         padding-bottom: 20px;
+        touch-action: manipulation;
+        border-bottom: 2px solid var(--main-bg-color);
     }
     .nav a {
         padding-bottom: 5px; /* padding pour éviter que la ligne se superpose au texte */
@@ -718,17 +719,24 @@ figure {
         justify-content: center;
     }
     .search-bar {
+        display: flex;
         width: 100%;
-        gap: 60px;
         justify-content: center; 
+        align-items: stretch;
+        gap: 0; 
     }
+    
      /* Cacher le texte du bouton "Rechercher" */
      .search-bar .search-btn {
         display: none;
     }
-    .search-bar input {
+   
+    .search-input {
         width: 100%;
-        text-align: left;
+        text-align: center;
+    }
+    .h1 {
+       margin-bottom: 5px;
     }
     /* Afficher l'icône de recherche (loupe) */
     .search-bar .search-btn-mobile {
@@ -756,7 +764,7 @@ figure {
         gap: 10px;
     } 
     .button {
-        width: 180px;
+        width: 45%;
         justify-content: flex-start;
     } 
     .hebergements-cards {
@@ -825,14 +833,15 @@ figure {
     }
     
     .footer-section li {
-        margin-bottom: 10px; 
-        font-size: 16.5px;
+        margin-bottom: 5px; 
+        font-size: 14px;
     }
     .footer-section {
         padding: 10px 20px; 
     }
     .footer-section h3 {
-        font-size: 18px;
+        font-size: 16px;
+        padding-bottom: 0px;
     }
   
 }
